# soundshelf

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DECISIONS.md  Doxyfile  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: FindMPV.cmake
docs/: AGENT_WORKFLOW.md
include/soundshelf/cli/: CLIController.hpp
include/soundshelf/core/: BatchTrackOps.hpp  ChromaprintEngine.hpp  Crossfader.hpp  Disc.hpp  DiscEnricher.hpp  DiscManager.hpp  DuplicateDetector.hpp  FolderWatcher.hpp  HotkeyManager.hpp  LibraryManager.hpp  LyricsController.hpp  MetadataResolver.hpp  MprisAdapter.hpp  PlayerEngine.hpp  PlaylistManager.hpp  PluginManager.hpp  PodcastManager.hpp  ReplayGainAnalyzer.hpp  Result.hpp  ScrobbleDrainer.hpp  Scrobbler.hpp  SettingsManager.hpp  SmartPlaylistEvaluator.hpp  Track.hpp  Translator.hpp  VisualizationFeeder.hpp
include/soundshelf/data/: BookmarkStore.hpp  DatabaseManager.hpp  FTS5Index.hpp  PlayHistory.hpp  PodcastStore.hpp  SchemaMigrator.hpp
include/soundshelf/io/: CDDAReader.hpp  CueParser.hpp  DiscReader.hpp  DiscRipper.hpp  FolderReader.hpp  FormatConverter.hpp  ImageReader.hpp  LibraryExporter.hpp  LibraryImporter.hpp  LrcParser.hpp  PcmDecoder.hpp  PlaylistExporter.hpp  PlaylistImporter.hpp  PodcastFeedParser.hpp  TagInfo.hpp
include/soundshelf/network/: AccurateRip.hpp  AccurateRipClient.hpp  AcoustIDClient.hpp  CoverArtClient.hpp  HttpRange.hpp  HttpServer.hpp  LastFmClient.hpp  ListenBrainzClient.hpp  LyricsClient.hpp  MusicBrainzClient.hpp  MusicBrainzSubmitter.hpp  NetworkLibrary.hpp  RemoteClient.hpp  RestClient.hpp
include/soundshelf/plugins/: NativeVisPlugin.hpp  OscilloscopePlugin.hpp  VisualStyle.hpp  VisualizationPlugin.hpp  WaveformOverviewPlugin.hpp  WinampVisAdapter.hpp
include/soundshelf/ui/: BatchTagEditor.hpp  ConverterDialog.hpp  DiscReadDialog.hpp  DiscView.hpp  DuplicateDialog.hpp  EqualizerWidget.hpp  LibraryView.hpp  LyricsWidget.hpp  MainWindow.hpp  PlayerWidget.hpp  PreferencesDialog.hpp  SmartPlaylistBuilder.hpp  SourcesModel.hpp  SpectrumWidget.hpp  StatsWidget.hpp  ThemeManager.hpp  TrayIcon.hpp
migrations/: 001_initial.sql  002_replaygain.sql  003_acoustid.sql  004_smart_playlists.sql  005_play_history.sql  006_bookmarks.sql  007_podcasts.sql  008_fts_contentless_sync.sql  009_library_sources.sql
resources/desktop/: soundshelf.desktop
resources/eq_presets/: bass_boost.json  classical.json  electronic.json  flat.json  jazz.json  rock.json  treble_boost.json  vocal.json
resources/themes/: amber_crt.qss  light.qss  modern_dark.qss  phosphor.qss
scripts/: agent_workflow.py  install-deps-windows.sh  install-deps.sh  setup-windows-vcpkg.ps1  setup-windows-vcpkg.sh  windows-deploy-vcpkg.sh  windows-deploy.sh
scripts/workflow_roles/: architect.md  committer.md  critic.md  programmer.md  reviewer.md  tester.md
src/: main.cpp
src/cli/: CLIController.cpp  cli_main.cpp
src/core/: BatchTrackOps.cpp  ChromaprintEngine.cpp  Crossfader.cpp  DiscEnricher.cpp  DiscManager.cpp  DuplicateDetector.cpp  FolderWatcher.cpp  HotkeyManager.cpp  LibraryManager.cpp  LyricsController.cpp  MetadataResolver.cpp  MprisAdapter.cpp  PlayerEngine.cpp  PlaylistManager.cpp  PluginManager.cpp  PodcastManager.cpp  ReplayGainAnalyzer.cpp  ScrobbleDrainer.cpp  Scrobbler.cpp  SettingsManager.cpp  SmartPlaylistEvaluator.cpp  Track.cpp  Translator.cpp  VisualizationFeeder.cpp
src/data/: BookmarkStore.cpp  DatabaseManager.cpp  FTS5Index.cpp  PlayHistory.cpp  PodcastStore.cpp  SchemaMigrator.cpp
src/io/: CDDAReader.cpp  CueParser.cpp  DiscRipper.cpp  FolderReader.cpp  FormatConverter.cpp  ImageReader.cpp  LibraryExporter.cpp  LibraryImporter.cpp  LrcParser.cpp  PcmDecoder.cpp  PlaylistExporter.cpp  PlaylistImporter.cpp  PodcastFeedParser.cpp  TagInfo.cpp
src/network/: AccurateRip.cpp  AccurateRipClient.cpp  AcoustIDClient.cpp  CoverArtClient.cpp  HttpRange.cpp  HttpServer.cpp  LastFmClient.cpp  ListenBrainzClient.cpp  LyricsClient.cpp  MusicBrainzClient.cpp  MusicBrainzSubmitter.cpp  NetworkLibrary.cpp  RemoteClient.cpp  RestClient.cpp
src/plugins/: NativeVisPlugin.cpp  OscilloscopePlugin.cpp  VisualizationPlugin.cpp  WaveformOverviewPlugin.cpp  WinampVisAdapter.cpp
src/ui/: BatchTagEditor.cpp  ConverterDialog.cpp  DiscReadDialog.cpp  DiscView.cpp  DuplicateDialog.cpp  EqualizerWidget.cpp  LibraryView.cpp  LyricsWidget.cpp  MainWindow.cpp  PlayerWidget.cpp  PreferencesDialog.cpp  SmartPlaylistBuilder.cpp  SourcesModel.cpp  SpectrumWidget.cpp  StatsWidget.cpp  ThemeManager.cpp  TrayIcon.cpp
tests/: CMakeLists.txt  test_accuraterip.cpp  test_audio_filter_chain.cpp  test_batch_track_ops.cpp  test_bookmark_store.cpp  test_cli.cpp  test_cli_podcast.cpp  test_cue_parser.cpp  test_database_discs.cpp  test_duplicate_detector.cpp  test_eq_presets.cpp  test_fingerprint.cpp  test_folder_watcher.cpp  test_format_converter.cpp  test_fts5_query.cpp  test_http_range.cpp  test_lastfm_sign.cpp  test_library_import.cpp  test_library_io.cpp  test_library_sources.cpp  test_lrc_parser.cpp  test_lyrics_controller.cpp  test_metadata_resolver.cpp  test_musicbrainz_submitter.cpp  test_pcm_decoder.cpp  test_play_history.cpp  test_playlist_io.cpp  test_podcast_feed_parser.cpp  test_podcast_manager.cpp  test_podcast_store.cpp  test_pure_helpers.cpp  test_remote_client.cpp  test_replaygain.cpp  test_smart_playlist.cpp  test_spectrum.cpp  test_taginfo.cpp  test_track_format.cpp  test_translator.cpp  test_visualization_feeder.cpp  test_visualizations.cpp
translations/: soundshelf_de.ts  soundshelf_en.ts  soundshelf_fr.ts  soundshelf_pl.ts
